# EIT

./: .gitignore
CameraWebServer/: CameraWebServer.ino
People-Counting-in-Real-Time/: people_counter.py  pyproject.toml
People-Counting-in-Real-Time/utils/: config.json
People-Counting-in-Real-Time/utils/data/logs/: counting_data.csv
esp32-cam/: app.py  pyproject.toml
opencv-count-people/: Multithread_PeopleCounter.py  Multithread_PeopleCounter_v2.py  PeopleCounter.py  PeopleCounter_Translated.py  log.txt
simulate-sales-data/: README.md  bar_products.csv  bar_sales.csv  hello.py  pyproject.toml  simulate.py
testing-video/: data_analysis.py  people_count.csv  test.py  test2.py
webpage/: shared_data.py
webpage/app/: app.py
webpage/app/static/css/: index.css
webpage/app/static/js/: index.js
webpage/app/templates/: index.html
webpage/css/: index.css
webpage/html/: index.html
yolo-object-recognition/: analyze.py  data.csv  people_counter.py  pyproject.toml  record_video.py  requirements.txt
yolo-object-recognition/bytetrack/: Dockerfile  app.py  docker-compose.yml
