[project]
name = "simulate-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"schedule==1.1.0",
"numpy==1.24.3",
"argparse==1.4.0",
"imutils==0.5.4",
"dlib==19.24.1",
"opencv-python==4.5.5.64",
"scipy==1.10.1",
"cmake==3.22.5",
]
